--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,9 +29,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   path_provider: ^2.0.1
-  sqflite: ^2.0.0+3
+  # sqflite: ^2.0.0+3
   cached_network_image: ^3.0.0
-
+  dio: ^4.0.0
+  shared_preferences: ^2.0.5
+  toast: ^0.1.5
+  provider: ^5.0.0
+  audioplayers: ^0.18.3
+  permission_handler: ^6.1.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -49,7 +54,16 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/db/quran.db
+    # - assets/db/quran.db
+    - assets/db/surah.json
+    - assets/db/quran_text.json
+    - assets/db/id_indonesian.json
+    - assets/images/bissmillah.png
+    - assets/images/quran-splash.png
+    - assets/images/quran-transparent.png
+    - assets/images/ayat.png
+    - assets/images/last_read.png
+    
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
@@ -65,15 +79,10 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family: "Lemon Juice"
+    - family: Poppins
       fonts:
-        - asset: assets/fonts/Lemon-Juice.otf
-    - family: QuickSand
-      fonts:
-        - asset: assets/fonts/quicksand/Quicksand-Regular.ttf
-        - asset: assets/fonts/quicksand/Quicksand-Bold.ttf
-          weight: 700
-        - asset: assets/fonts/quicksand/Quicksand-Medium.ttf
+        - asset: assets/fonts/poppins/Poppins-Regular.ttf
+        - asset: assets/fonts/poppins/Poppins-SemiBold.ttf
           weight: 500
     - family: "FontArab"
       fonts:
